@@ -20,6 +20,7 @@ SHA256 feb737b64a323ddeae9384d54e1a40b1a9fd371d034607dc266e9ceadd12045a files/fr
 DIST freewrl-1.16.1.tar.gz 3333751 RMD160 96643006d28a0aa54222829140fed41446d21a51 SHA1 b9c8b6455a343998dc6dc0a1343d3d58998a3679 SHA256 51baee1a326d78eac33700de3a9df8ace792785a95b5309fcfadc12ee3288625
 DIST freewrl-1.18.10.tar.gz 3581122 RMD160 db3f699ae96104ed347a7ffbb615c1e90600457f SHA1 e6912e36da1c27753284c03c7fcc37b67827a436 SHA256 7d6dd3ca3f39605b7703736d168e3d99231a3ccf9f199ae6a459adc82463f35e
 DIST freewrl-1.18.14.tar.gz 3515019 RMD160 cc5a2b17a06cca79002476c81b34c72585ad078f SHA1 90a14ad4387209590bdfadf4b4af5e25e8bfe180 SHA256 fa12172675ca6c309a10545b23c5cab01a236f37613635bf0f26ae666d56323e
+DIST freewrl-1.19.1.tar.gz 3526871 RMD160 d2e0c6d12161201d08e6e6f4295315275fed36f6 SHA1 d1e02005eafbdb042142553778fb812c1c7bd5d7 SHA256 01e9b25f403a7996442cdcb307e8edbdb85c909d0de711e949589f49cdaceac3
 EBUILD freewrl-1.16.1.ebuild 1694 RMD160 7f2f4a4f96184e44b5dba89761a1c801ace769b6 SHA1 75429fa4170f00a501ebcc314dab4e431300fd19 SHA256 38716fac909337f0ea0fc0a754f3f5b13a215da8812cea6608020d5d6415f626
 MD5 f7a705bdcaae0def36b05af71117754a freewrl-1.16.1.ebuild 1694
 RMD160 7f2f4a4f96184e44b5dba89761a1c801ace769b6 freewrl-1.16.1.ebuild 1694
@@ -32,10 +33,14 @@ EBUILD freewrl-1.18.14.ebuild 1732 RMD160 79a3ae49d2a2da618118cecfd55d1fea78d309
 MD5 4c34990bb6618ae3e2fbbad9d25408a9 freewrl-1.18.14.ebuild 1732
 RMD160 79a3ae49d2a2da618118cecfd55d1fea78d309cd freewrl-1.18.14.ebuild 1732
 SHA256 34916477a19b8d50e187de4440effc84ba9d946e3135d5532fcb033c924a1c7a freewrl-1.18.14.ebuild 1732
-MISC ChangeLog 2225 RMD160 ddcb3169badf753abd38ae7159ee77e281d469b9 SHA1 62b969de1e53f1dafa8f17d24b85a198c644ccae SHA256 82133f45e5a88149a5fe0897fe07e90691c2bfd1cdf995bbbdfaa28e3a5d9b6c
-MD5 6a8723a914ef5c0c96f715bfb22d8687 ChangeLog 2225
-RMD160 ddcb3169badf753abd38ae7159ee77e281d469b9 ChangeLog 2225
-SHA256 82133f45e5a88149a5fe0897fe07e90691c2bfd1cdf995bbbdfaa28e3a5d9b6c ChangeLog 2225
+EBUILD freewrl-1.19.1.ebuild 1731 RMD160 eca9900a484e5da667c0ac9195fc5437dc94e159 SHA1 da3264e1c5a3be766a655a7a35744a915a73c7a0 SHA256 479a7147157e10c646dac56c40bccdbff9857725fcd45d804a0b8f351e744f1c
+MD5 5ddfc7e61ff07c6d0833eac857716a66 freewrl-1.19.1.ebuild 1731
+RMD160 eca9900a484e5da667c0ac9195fc5437dc94e159 freewrl-1.19.1.ebuild 1731
+SHA256 479a7147157e10c646dac56c40bccdbff9857725fcd45d804a0b8f351e744f1c freewrl-1.19.1.ebuild 1731
+MISC ChangeLog 2343 RMD160 ab4a0e55a03204eedea44300fa20214a5236cacf SHA1 f00f3ac0171881059813fddf063d28364a5eb781 SHA256 64e97a3b2bc895e07c9cd22afbd716061128c27619a4e5d03a47b406ab492976
+MD5 011d6d145a0ef1f2a0e02bf1436e2736 ChangeLog 2343
+RMD160 ab4a0e55a03204eedea44300fa20214a5236cacf ChangeLog 2343
+SHA256 64e97a3b2bc895e07c9cd22afbd716061128c27619a4e5d03a47b406ab492976 ChangeLog 2343
 MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
 MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 metadata.xml 217
@@ -49,10 +54,13 @@ SHA256 3141e2a636c2aa1c126a80801a5bc48d4e17273a2f943c8c7c5c0cd573553cba files/di
 MD5 1ce75bfe1add62166f4cb163df40ca2d files/digest-freewrl-1.18.14 250
 RMD160 7415908b2115d3cb424446ed84fd10b5585c6c89 files/digest-freewrl-1.18.14 250
 SHA256 c91c580a44081f4a2dade097d3364c7e7a97bd87ed580c9c6e91c8dfdee490df files/digest-freewrl-1.18.14 250
+MD5 218ed2294a03b714158bfcd9558bee69 files/digest-freewrl-1.19.1 247
+RMD160 23e2bb82db2b218aa1d9568fab11b8be00b05ff4 files/digest-freewrl-1.19.1 247
+SHA256 e2a5f1fcc7984c5677f772ac7ea45372b5385830c8677e3979a12615f61156ff files/digest-freewrl-1.19.1 247
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.2 (GNU/Linux)
+Version: GnuPG v2.0.3 (GNU/Linux)
 
-iD8DBQFF0dFGr2QksT29OyARAkUiAJsEsrI40nwNLRmsD8KkRehQP3701gCfUV3x
-Zy2a6J3oLy891uYscS3VrX0=
-=x+dC
+iD8DBQFGEZAhr2QksT29OyARAhUgAJ0bujdLWwJklS/fsbzMz5SyocpdDgCaAuAU
+moBzqQzpUrQLZPda6v9Nb2U=
+=gn7S
 -----END PGP SIGNATURE-----
