@@ -1,0 +1,3 @@
+MD5 ade9ece21a51d12ddbb48d35886d9f37 freewrl-1.19.1.tar.gz 3526871
+RMD160 d2e0c6d12161201d08e6e6f4295315275fed36f6 freewrl-1.19.1.tar.gz 3526871
+SHA256 01e9b25f403a7996442cdcb307e8edbdb85c909d0de711e949589f49cdaceac3 freewrl-1.19.1.tar.gz 3526871
